samples/_failures_safe/1761044022_3c83ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0fa6016e.c: In function ‘display_compression_results’:
./samples/SAFE/__tmp_0fa6016e.c:157:9: error: expected declaration or statement at end of input
  157 |         double ratio = (1.0 - (double)ctx->header.compressed_size / ctx->header.original_size) * 100.0;
      |         ^~~~~~
./samples/SAFE/__tmp_0fa6016e.c:157:9: error: expected declaration or statement at end of input
